@@ -1017,15 +1017,16 @@ body {
    class=property>mask-image</code></a>’ interacts with other
    comma-separated mask properties to form each mask image layer.
 
-  <h2 id=the-mask-origin><span class=secno>9. </span>The ‘<code
-   class=property>mask-origin</code>’ property</h2>
+  <h2 id=the-mask-origin><span class=secno>9. </span>The ‘<a
+   href="#mask-origin"><code class=property>mask-origin</code></a>’
+   property</h2>
 
   <table class=propdef>
    <tbody>
     <tr>
      <th>Name:
 
-     <td><dfn id=background-origin>background-origin</dfn>
+     <td><dfn id=mask-origin>mask-origin</dfn>
 
     <tr>
      <th><a href="#values">Value</a>:
@@ -1104,8 +1105,8 @@ body {
 
   <p class=note>Note that if ‘<a href="#mask-clip"><code
    class=property>mask-clip</code></a>’ is ‘<code
-   class=css>padding-box</code>’, ‘<code
-   class=property>mask-origin</code>’ is ‘<code
+   class=css>padding-box</code>’, ‘<a href="#mask-origin"><code
+   class=property>mask-origin</code></a>’ is ‘<code
    class=css>border-box</code>’, ‘<a href="#mask-position"><code
    class=property>mask-position</code></a>’ is ‘<code class=css>top
    left</code>’ (the initial value), and the element has a non-zero border,
@@ -2129,17 +2130,14 @@ body {
     href="#ltattachmentgt" title="&lt;attachment&gt;"><strong>7.</strong></a>
     
 
-   <li>background-origin, <a href="#background-origin"
-    title=background-origin><strong>9.</strong></a>
-
    <li>‘<code class=css>border-box</code>’
     <ul>
      <li>‘<a href="#mask-clip"><code class=property>mask-clip</code></a>’
       value, <a href="#border-box"
       title="''border-box'', 'mask-clip' value"><strong>8.1.</strong></a>
 
-     <li>‘<code class=property>mask-origin</code>’ value, <a
-      href="#border-box0"
+     <li>‘<a href="#mask-origin"><code
+      class=property>mask-origin</code></a>’ value, <a href="#border-box0"
       title="''border-box'', 'mask-origin' value"><strong>9.</strong></a>
     </ul>
 
@@ -2207,6 +2205,9 @@ body {
    <li>mask-image, <a href="#mask-image"
     title=mask-image><strong>5.</strong></a>
 
+   <li>mask-origin, <a href="#mask-origin"
+    title=mask-origin><strong>9.</strong></a>
+
    <li>mask painting area, <a href="#mask-painting-area"
     title="mask painting area"><strong>8.1.</strong></a>, <a
     href="#mask-painting-area." title="mask painting area.">6.</a>, <a
@@ -2244,8 +2245,8 @@ body {
       value, <a href="#padding-box"
       title="''padding-box'', 'mask-clip' value"><strong>8.1.</strong></a>
 
-     <li>‘<code class=property>mask-origin</code>’ value, <a
-      href="#padding-box0"
+     <li>‘<a href="#mask-origin"><code
+      class=property>mask-origin</code></a>’ value, <a href="#padding-box0"
       title="''padding-box'', 'mask-origin' value"><strong>9.</strong></a>
     </ul>
 
@@ -2331,21 +2332,6 @@ body {
 
    <tbody>
     <tr>
-     <th><a class=property href="#background-origin">background-origin</a>
-
-     <td>&lt;box&gt; [ , &lt;box&gt; ]*
-
-     <td>padding-box
-
-     <td>all elements
-
-     <td>no
-
-     <td>N/A
-
-     <td>visual
-
-    <tr>
      <th><a class=property href="#mask-attachment">mask-attachment</a>
 
      <td>&lt;attachment&gt; [ , &lt;attachment&gt; ]*
@@ -2386,6 +2372,21 @@ body {
 
      <td>All elements. In SVG, it applies to container elements and graphics
       elements
+
+     <td>no
+
+     <td>N/A
+
+     <td>visual
+
+    <tr>
+     <th><a class=property href="#mask-origin">mask-origin</a>
+
+     <td>&lt;box&gt; [ , &lt;box&gt; ]*
+
+     <td>padding-box
+
+     <td>all elements
 
      <td>no
 
