@@ -1,4 +1,7 @@
 2012-08-11 dschulze@adobe.com
+    Fixed typo on 'mask-origin'.
+
+2012-08-11 dschulze@adobe.com
     Added 'mask-origin'.
 
 2012-08-11 dschulze@adobe.com
